# BOT_CLAWS_YULIIA

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
deploy/: README.md  backup.sh  bot-claws.service  install.sh
docs/_transition/: REQUEST_TO_OLD_MACHINE.md  transition-bundle.md
docs/superpowers/plans/: 2026-05-05-foundation.md  2026-05-06-booking-core.md  2026-05-06-notifications.md  2026-05-06-voice-intake.md  2026-05-07-smart-fallback.md  2026-05-07-voice-intake-edit-and-accuracy.md
docs/superpowers/specs/: 2026-05-07-smart-fallback-design.md  2026-05-07-voice-intake-edit-and-accuracy-design.md
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
src/: config.py  main.py
src/bot/: admin_alerts.py  callback_data.py  parsers.py  relative_date.py  skip_phrases.py  states.py  ui.py
src/bot/handlers/: add_appointment.py  appointment_card.py  clients.py  dev_panel.py  intake.py  lists.py  notify_settings.py  quota.py  start.py  system.py  text_add.py
src/bot/keyboards/: appointment_card.py  appointment_picker.py  calendar.py  client_picker.py  confirm.py  confirm_card.py  date_shortcut.py  edit_field_picker.py  main_menu.py  period_picker.py  time_part_picker.py  time_picker.py
src/bot/middlewares/: concurrency.py  whitelist.py
src/services/: formatters.py  settings_service.py
src/services/intent/: __init__.py  llm.py  llm_anthropic.py  llm_gemini.py  llm_groq.py  llm_openai.py  llm_openrouter.py  prompt.py  registry.py  resolvers.py  text_normalizer.py  types.py
src/services/intent/actions/: __init__.py  _common.py  bulk_cancel_by_client.py  bulk_cancel_by_date.py  bulk_delete_clients.py  cancel_appointment.py  count_appointments.py  count_client_appointments.py  count_clients.py  create_appointment.py  delete_client.py  edit_note.py  list_appointments.py  list_client_history.py  move_appointment.py
src/services/notifications/: __init__.py  rules.py  scheduler.py  scheduler_glue.py  senders.py
src/services/parser/: text_parser.py
src/services/voice/: __init__.py  faster_whisper_stt.py  openai_whisper_stt.py  stt.py
src/storage/: db.py  models.py
src/storage/migrations/: env.py
src/storage/migrations/versions/: 0001_initial.py  (+1 more)
src/storage/repositories/: __init__.py  appointment_notify_overrides.py  appointments.py  clients.py  notify_rules.py  scheduled_jobs.py  settings.py
tests/: conftest.py  test_smoke.py
tests/bot/: test_add_appointment_flow.py  test_appointment_card.py  test_callback_data.py  test_clients_handler.py  test_concurrency_middleware.py  test_keyboards.py  test_lists_handler.py  test_relative_date.py  test_skip_phrases.py  test_smart_brain_flow.py  test_start_handler.py  test_states.py  test_system_handler.py  test_text_add_handler.py  test_ui.py  test_whitelist_middleware.py
tests/bot/keyboards/: test_appointment_picker.py  test_confirm_card.py
tests/services/: test_formatters.py  test_notifications_rules.py  test_notifications_scheduler.py  test_notifications_scheduler_glue.py  test_notifications_senders.py  test_settings_service.py  test_text_parser.py
tests/services/intent/: test_editable_field.py  test_llm_dispatcher.py  test_llm_gemini.py  test_llm_groq.py  test_llm_openai.py  test_prompt.py  test_registry.py  test_resolvers.py  test_text_normalizer.py
tests/services/voice/: test_faster_whisper_stt.py  test_openai_whisper_stt.py  test_stt_dispatcher.py
tests/storage/: test_appointment_notify_overrides.py  test_db.py  test_models.py  test_repositories.py  test_scheduled_jobs.py
(+11 files in other folders)
