[tool.poetry]
name = "bot-claws-yuliia"
version = "0.1.0"
description = "Personal Telegram bot for managing client appointments with voice input"
authors = ["Yuliia <owner@local>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# Min 3.10 for PEP 604 (X | Y union), match statement, structural type alias.
# Prod runs on 3.12 (see Dockerfile); local dev on 3.10 is supported.
python = "^3.10"

# Telegram bot
aiogram = "^3.13"

# Storage
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
aiosqlite = "^0.20"
alembic = "^1.14"

# FSM storage
redis = "^5.2"

# Scheduling
apscheduler = "^3.10"

# Config
pydantic = "^2.10"
pydantic-settings = "^2.6"

# HTTP / API clients
httpx = "^0.28"
openai = "^1.55"

# Logging
structlog = "^24.4"

# Time zones (zoneinfo built-in for py3.12, но Windows нужен tzdata)
tzdata = "^2024.2"
greenlet = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
ruff = "^0.8"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "S", "RUF"]
ignore = [
    "S101",    # assert в тестах
    "RUF001",  # ambiguous unicode in identifiers — не используем кириллицу в идентификаторах
    "RUF002",  # ambiguous unicode in docstrings — у нас русскоязычные docstrings, это нормально
    "RUF003",  # ambiguous unicode in comments — то же самое для комментариев
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
